# orbit-propagator

./: .gitignore  .gitmodules  4.5kg_.01A_1.9Cd.txt  4.5kg_.031A_2.2Cd.txt  4kg_.01A_1.9Cd.txt  4kg_.031A_2.2Cd.txt  5kg_.01A_1.9Cd.txt  5kg_.031A_2.2Cd.txt  CMakeLists.txt  DragParam_tumble.mat  Kalman_filter.m  LICENSE  Mainvinti.c  OnBoardOrbitProp_sim.m  OnBoardOrbitStateEstimator_sim.m  Propagator_error_Analysis.m  README.md  VintiSimulationGNU.m  Vinti_error_Analysis.m  build.sh  buildDocs.sh  inputStateVect.txt  kalman_filter_sim.m  new_Vinti_error_analys.m  test_vinti6.c  vinti_filter.m  vinti_filter_sim.m  vinti_sim.m  vinti_sim_reconfigured.m  vinti_sim_withKalman.m
.github/workflows/: ci.yaml
include/: Vinti6.h  coord_conversion.h
research/: OrbitPropagation.adoc
src/: Mainvinti.c  Vinti6.c  coord_conversion.c
